--- a/src/main/java/br/utfpr/edu/jogogeneral/view/index.html
+++ b/src/main/java/br/utfpr/edu/jogogeneral/view/index.html
@@ -1,122 +1,338 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <title>Jogo General</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        body {
-            background-image: url('./images/background.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            padding-top: 5%;
-        }
-
-        .top-logo {
-            background-image: url('./images/logo.png');
-            width: 575px;
-            height: 137px;
-            background-size: cover;
-            margin: -45px auto 0;
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            width: 100%;
-        }
-
-        .button-column-right {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            width: 45%;
-            padding: 15px;
-        }
-
-        .button-column-right .last-button {
-            margin-top: 15%;
-            width: 30%;
-            background-color: #994203;
-            border: 2px solid #000000;
-            color: black;
-            font-weight: bold;
-            text-align: center;
-            padding: 20px;
-            border-radius: 20px;
-            transition: transform 0.2s, background-color 0.2s;
-        }
-
-        .button-column-right .last-button:hover {
-            transform: scale(1.1);
-            background-color: #ff3c00;
-            animation: blink 0.2s linear 2 alternate;
-        }
-
-        @keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-            }
-        }
-
-        .button-column-left {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            width: 45%;
-            padding: 15px;
-        }
-
-        .button {
-            background-color: #994203;
-            border: 2px solid #000000;
-            color: black;
-            font-weight: bold;
-            text-align: center;
-            padding: 20px;
-            margin: 10px 0;
-            box-sizing: border-box;
-            border-radius: 20px;
-            transition: transform 0.2s, background-color 0.2s;
-        }
-
-        .button:hover {
-            transform: scale(1.1);
-            background-color: #ff3c00;
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/index.css"/>
 </head>
 <body>
-<div class="top-logo"></div>
-<div class="button-container">
-    <div class="button-column-left">
-        <div class="button">Button 1</div>
-        <div class="button">Button 2</div>
-        <div class="button">Button 3</div>
+    <div class="top-logo"></div>
+    <div class="button-container">
+        <div class="button-column-left">
+            <div id="openModal" class="button"><i class="fa-solid fa-address-card" style="color: #000000;"></i> Incluir jogador</div>
+            <div id="openRemovePlayerModal" class="button"><i class="fa-solid fa-user-slash" style="color: #000000;"></i> Remover jogador</div>
+            <div class="button" id="roll-button"><i class="fa-solid fa-dice" style="color: #000000;"></i> Executar rodada</div>
+        </div>
+        <div class="scene">
+            <div class="cube">
+                <div class="face front">1</div>
+                <div class="face back">2</div>
+                <div class="face right">3</div>
+                <div class="face left">4</div>
+                <div class="face top">5</div>
+                <div class="face bottom">6</div>
+            </div>
+            <div class="cube">
+                <div class="face front">1</div>
+                <div class="face back">2</div>
+                <div class="face right">3</div>
+                <div class="face left">4</div>
+                <div class="face top">5</div>
+                <div class="face bottom">6</div>
+            </div>
+            <div class="cube">
+                <div class="face front">1</div>
+                <div class="face back">2</div>
+                <div class="face right">3</div>
+                <div class="face left">4</div>
+                <div class="face top">5</div>
+                <div class="face bottom">6</div>
+            </div>
+            <div class="cube">
+                <div class="face front">1</div>
+                <div class="face back">2</div>
+                <div class="face right">3</div>
+                <div class="face left">4</div>
+                <div class="face top">5</div>
+                <div class="face bottom">6</div>
+            </div>
+            <div class="cube">
+                <div class="face front">1</div>
+                <div class="face back">2</div>
+                <div class="face right">3</div>
+                <div class="face left">4</div>
+                <div class="face top">5</div>
+                <div class="face bottom">6</div>
+            </div>
+        </div>
+        <div class="button-column-right">
+            <div class="button" id="mostrarTabela"><i class="fa-solid fa-table-list" style="color: #000000;"></i> Cartela de resultados</div>
+            <div class="button"><i class="fa-solid fa-feather" style="color: #000000;"></i> Gravar os dados</div>
+            <div class="button"><i class="fa-solid fa-book-open-reader" style="color: #000000;"></i> Ler os dados</div>
+            <div class="button last-button"><i class="fa-solid fa-door-open" style="color: #000000;"></i> Sair da aplicação</div>
+        </div>
     </div>
-    <div style="width: 10%;"></div>
-    <div class="button-column-right">
-        <div class="button">Button 5</div>
-        <div class="button">Button 6</div>
-        <div class="button">Button 7</div>
-        <div class="button last-button"><i class="fa-solid fa-arrow-right-from-bracket"></i></div>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-title">
+                <i class="fa-solid fa-user-plus" style="color: #000000;"></i> Cadastro
+            </div>
+            <input class="modal-input" type="text" placeholder="Nome">
+            <select class="modal-input">
+                <option value="M">Máquina</option>
+                <option value="H">Humano</option>
+            </select>
+            <div class="modal-buttons">
+                <button class="modal-button modal-button-cancel">
+                    <i class="fas fa-times"></i> Cancelar
+                </button>
+                <button class="modal-button modal-button-confirm">
+                    <i class="fas fa-check"></i> Confirmar
+                </button>
+            </div>
+        </div>
     </div>
-</div>
+    <div id="removePlayerModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-title">
+                <i class="fa-solid fa-user-slash" style="color: #000000;"></i> Remover Jogador
+            </div>
+            <select class="modal-input" id="playerSelect">
+              <!-- Opções de jogadores são adicionadas pelo javascript -->
+            </select>
+            <div class="modal-buttons">
+                <button class="modal-button modal-button-cancel-remove">
+                    <i class="fas fa-times"></i> Cancelar
+                </button>
+                <button class="modal-button modal-button-confirm">
+                    <i class="fas fa-trash"></i> Remover
+                </button>
+            </div>
+        </div>
+    </div>
+    <div id="tabelaContainer" class="transition-fade-out" style="display:none; width: 70%; margin-top:-13%; height:70%">
+        <table class="table table-bordered" style="max-width:100%; max-height:100%;">
+            <thead>
+                <tr>
+                    <th class="col-lg-1"><b>#</b></th>
+                </tr>
+            </thead>
+            <tbody id="table-body">
+                <tr>
+                    <td class="col-lg-1"><b>1</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>2</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>3</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>4</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>5</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>6</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>T</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>Q</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>F</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>S+</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>S-</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>G</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>X</b></td>
+                </tr>
+                <tr>
+                    <td class="col-lg-1"><b>Total</b></td>     
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <script>
+        debugger;
+        const cubes = document.querySelectorAll('.cube');
+        const rollButton = document.getElementById('roll-button');
+        const mostrarTabela = document.getElementById('mostrarTabela');
+        const tabelaContainer = document.getElementById('tabelaContainer');
+        const modal = document.getElementById('modal');
+        const openModal = document.getElementById('openModal');
+        const removePlayerModal = document.getElementById('removePlayerModal');
+        const openRemovePlayerModal = document.getElementById('openRemovePlayerModal');
+        const playerSelect = document.getElementById('playerSelect');
+        const cancelButton = document.querySelector('.modal-button-cancel');
+        const cancelButtonRemove = document.querySelector('.modal-button-cancel-remove');
+        const table = document.querySelector('table');
+
+
+        //array de objetos jogador
+        const players = [
+            { id: 1, nome: 'Jogador 1' },
+            { id: 2, nome: 'Jogador 2' },
+            { id: 3, nome: 'Jogador 3' }
+        ];
+
+
+        //DADOS
+        let rolling = false;
+        rollButton.addEventListener('click', () => {
+            if (!rolling) {
+                rolling = true;
+
+                const results = []; // Armazenar os resultados dos dados
+
+                let cubesMoving = cubes.length; // Inicializa com o número total de cubos
+
+                cubes.forEach(cube => {
+                    cube.style.transition = 'transform 2s ease-in-out';
+
+                    // Simule um resultado aleatório (de 1 a 6)
+                    const result = Math.floor(Math.random() * 6) + 1;
+                    results.push(result); // Adicionar o resultado ao array de resultados
+
+                    const rotations = 5 + Math.floor(Math.random() * 5); // Número de rotações aleatórias
+
+                    // Gire o dado aleatoriamente antes de parar na face do resultado
+                    const randomX = Math.floor(Math.random() * 360);
+                    const randomY = Math.floor(Math.random() * 360);
+
+                    setTimeout(() => {
+                        cube.style.transform = `rotateX(${randomX}deg) rotateY(${randomY}deg)`;
+                    }, 100);
+
+                    setTimeout(() => {
+                        cube.style.transform = `rotateX(0deg) rotateY(0deg)`;
+                        cube.style.transition = 'transform 0.5s ease-in-out';
+
+                        // Defina a face do resultado para cima
+                        switch (result) {
+                            case 1:
+                                cube.style.transform = 'rotateX(0deg) rotateY(0deg)';
+                                break;
+                            case 2:
+                                cube.style.transform = 'rotateX(0deg) rotateY(180deg)';
+                                break;
+                            case 3:
+                                cube.style.transform = 'rotateX(0deg) rotateY(270deg)';
+                                break;
+                            case 4:
+                                cube.style.transform = 'rotateX(0deg) rotateY(90deg)';
+                                break;
+                            case 5:
+                                cube.style.transform = 'rotateX(-90deg) rotateY(0deg)';
+                                break;
+                            case 6:
+                                cube.style.transform = 'rotateX(90deg) rotateY(0deg)';
+                                break;
+                        }
+
+                        // Verificar se o cubo parou de se mover
+                        cube.addEventListener('transitionend', () => {
+                            cubesMoving--;
+
+                            if (cubesMoving === 0) {
+                                // Todos os cubos pararam de se mover
+                                setTimeout(() => {
+                                    // Apresentar os resultados em um único alert
+                                    const resultsString = results.join(', ');
+                                    alert(`Resultados: ${resultsString}`);
+                                    rolling = false; // Redefina a variável para permitir futuras rolagens
+                                }, 500);
+                            }
+                        });
+                    }, 2000 + rotations * 100); // Tempo adicional com base no número de rotações aleatórias
+                });
+            }
+        });
+
+        //FIM DADOS
+
+
+        //CARTELA RESULTADOS
+        function addColumnToHeader() {
+            const headerRow = table.querySelector('thead tr');
+            const newColumnHeader = prompt('Digite o título da nova coluna:');
+            
+            if (newColumnHeader) {
+                const newHeaderCell = document.createElement('th');
+                newHeaderCell.textContent = newColumnHeader;
+                headerRow.appendChild(newHeaderCell);
+            }
+        }
+
+        function addRowsToTable() {
+            for (let i = 0; i < 13; i++) {
+                const newRow = document.createElement('tr');
+                for (let j = 0; j < table.rows[0].cells.length; j++) {
+                    const newCell = document.createElement('td');
+                    newRow.appendChild(newCell);
+                }
+                table.querySelector('tbody').appendChild(newRow);
+            }
+        }
+
+        mostrarTabela.addEventListener('click', () => {
+            if (tabelaContainer.classList.contains('transition-fade-out')) {
+                tabelaContainer.classList.remove('transition-fade-out');
+                tabelaContainer.style.display = 'block';
+                mostrarTabela.innerHTML = '<i class="fa-solid fa-eye-slash" style="color: #000000;"></i> Ocultar cartela de resultados';
+            } else {
+                tabelaContainer.classList.add('transition-fade-out');
+                mostrarTabela.innerHTML = '<i class="fa-solid fa-table-list" style="color: #000000;"></i> Cartela de resultados';
+            }
+        });
+
+        //FIM CARTELA RESULTADOS
+
+        //MODAL ADICIONAR PLAYERS
+        openModal.addEventListener('click', () => {
+            modal.style.display = 'block';
+        });
+
+        cancelButton.addEventListener('click', () => {
+            modal.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+
+        //FIM MODAL ADICIONAR PLAYERS
+
+        //MODAL REMOVER PLAYERS
+        players.forEach(player => {
+            const option = document.createElement('option');
+            option.value = player.id;
+            option.textContent = player.nome;
+            playerSelect.appendChild(option);
+        });
+
+        openRemovePlayerModal.addEventListener('click', () => {
+            removePlayerModal.style.display = 'block';
+        });
+
+        cancelButtonRemove.addEventListener('click', () => {
+            removePlayerModal.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (event.target === removePlayerModal) {
+                removePlayerModal.style.display = 'none';
+            }
+        });
+        //FIM MODAL REMOVER PLAYERS
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
