--- a/src/main/java/br/utfpr/edu/jogogeneral/view/css/index.css
+++ b/src/main/java/br/utfpr/edu/jogogeneral/view/css/index.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-    background-image: url('../../images/background.jpg');
+    background-image: url('../images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -18,7 +18,7 @@ body {
 }
 
 .top-logo {
-    background-image: url('../../images/logo.png');
+    background-image: url('../images/logo.png');
     width: 575px;
     height: 137px;
     background-size: cover;
