--- a/src/main/resources/static/view/css/index.css
+++ b/src/main/resources/static/view/css/index.css
@@ -366,6 +366,7 @@ input[type="text"] {
     border: 2px solid #333;
     border-radius: 5px;
     font-size: 16px;
+    text-align: center;
 }
 
 button[type="submit"]:hover {
