Finalizada implementação e documentação

--- a/src/main/resources/static/view/css/index.css
+++ b/src/main/resources/static/view/css/index.css
@@ -219,10 +219,11 @@ body {
     margin-bottom: 20px;
 }
 
-.modal-input {
+.modal-input-cadastrar {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
+    text-align: left !important;
 }
 
 .modal-buttons {
