--- a/src/main/resources/static/view/css/index.css
+++ b/src/main/resources/static/view/css/index.css
@@ -11,7 +11,7 @@ h1 {
     color: #ff9900;
 }
 
-#botoes {
+.botoes {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -21,6 +21,18 @@ h1 {
     padding: 20px;
     border: 4px solid #000; 
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);    
+}
+
+.infos {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.726);
+    padding: 20px;
+    border: 4px solid #000;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
 }
 
 .botao {
